# dental-3dgs-lab

./: .gitignore  02-vtk-interactive-viewer.ipynb  03-synthetic-views-for-3dgs.ipynb  04-train-3dgs-gsplat.ipynb  README.md  pyproject.toml
docs/architecture/: multi-agent-pipeline.md
docs/research/: dataset-teeth3ds.md
notebooks/: 01-vtk-3dgs-poc.ipynb  02-vtk-interactive-viewer.ipynb  03-synthetic-views-for-3dgs.ipynb  04-train-3dgs-gsplat.ipynb  README.md
scripts/: ablacion_recetas.py  fetch_teeth3ds.sh
